- reverted to bootstrap 4.3 - increased font size - moving chart to right when on mobile - added responsive top-nav - fixed issue in page.js - removed class small from buttons and forms

--- a/static/css/common.css
+++ b/static/css/common.css
@@ -134,28 +134,29 @@
 
 .inputbox {
     width: 50px;
-    height: 22px;
+    height: 24px;
     text-align: left;
 }
+
 .inputbox1 {
     width: 50px;
-    height: 22px;
+    height: 24px;
     text-align: left;
 }
 .inputbox2 {
     width: 50px;
-    height: 22px;
+    height: 24px;
     text-align: left;
 }
 .inputbox3 {
     width: 50px;
-    height: 22px;
+    height: 24px;
     text-align: left;
 }
 
 input.rangesbox {
     width: 50px;
-    height: 22px;
+    height: 24px;
     text-align: center;
 }
 
